responsiveness fixed on smaller devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -463,6 +463,7 @@ h6 {
   background-color: var(--background-color);
   font-size: 14px;
   position: relative;
+  padding-bottom: 2rem;
 }
 
 .footer .footer-top {
@@ -662,7 +663,7 @@ section,
 .section {
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 60px 0;
+  padding: 60px 1rem;
   scroll-margin-top: 90px;
   overflow: clip;
 }
@@ -888,6 +889,7 @@ section,
   position: relative;
   z-index: 1;
   margin-top: 5rem;
+  /* width: 80%; */
   background-color: var(--surface-color);
   border-radius: 20px;
   border: 0.2rem solid hsl(from var(--accent-color) h 90 40);
@@ -1398,8 +1400,8 @@ section,
 .call-to-action .container {
   background-image: radial-gradient(
     circle,
-    var(--accent-color),
-    var(--background-color)
+    hsla(from var(--contrast-color) h s 20%),
+    var(--accent-color)
   );
   color: var(--contrast-color);
   position: relative;
@@ -1416,8 +1418,8 @@ section,
 }
 
 .call-to-action .btn-cta {
-  background-color: color-mix(in srgb, var(--contrast-color) 15%, transparent);
-  color: var(--contrast-color);
+  background-color: var(--nav-dropdown-background-color);
+  color: var(--surface-color);
   padding: 12px 40px;
   border-radius: 50px;
   transition: all 0.3s ease;
@@ -2358,9 +2360,3 @@ section,
   color: var(--accent-color);
 }
 
-/*--------------------------------------------------------------
-# Starter Section Section
---------------------------------------------------------------*/
-.starter-section {
-  /* Add your styles here */
-}
